--- a/app_creditcard/static/css/style.css
+++ b/app_creditcard/static/css/style.css
@@ -13,6 +13,15 @@ body {
   margin: 100px 0;
   border-radius: 5px; }
 
+.valid, .invalid {
+  margin: 4px; }
+
+.valid {
+  color: green; }
+
+.invalid {
+  color: red; }
+
 input[type=text] {
   margin: 5px 0; }
 
