--- a/app_creditcard/static/scss/style.scss
+++ b/app_creditcard/static/scss/style.scss
@@ -1,33 +1,98 @@
+
 body{
   background: url('../img/background.jpg') no-repeat;
   background-size: cover;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', cursive;
 }
 
 .content{
-  background:#333;
+  background:rgba(44,62,80,0.85);
   color:#fff;
   text-align: center;
-  padding:20px;
-  margin:100px 0;
-  border-radius:5px;
-}
+  display:table;
+  height: 100vh;
+  width:100%;
 
-.valid, .invalid{
-  margin: 4px;
-}
+  .credit-cards{
+    display: flex;
+    width: 43%;
+    justify-content: space-between;
+    margin: 0 auto;
+    flex-wrap: wrap;
+  }
 
-.valid{
-  color:green;
-}
+  .wrap-content{
+    display: table-cell;
+    vertical-align: middle;
+  }
 
-.invalid{
-  color:red;
-}
+  .valid, .invalid{
+    margin: 4px;
+    font-size:13px;
+  }
 
-input[type=text]{
-  margin:5px 0;
+  .valid{
+    color:green;
+  }
+
+  .invalid{
+    color:red;
+  }
+
+  .result-file{
+    margin-bottom:40px;
+  }
+
+  .form-quantity{
+    min-width: 220px;
+  }
+
+  .form-creditcard{
+    min-width: 157px;
+  }
+
+  .form-control{
+    margin: 5px 0;
+    border: none;
+    background: transparent;
+    color: #fff;
+    border-bottom: 1px solid #fff;
+    padding:5px;
+    &::-webkit-input-placeholder {
+      color:#fff;
+    }
+
+    &::-moz-placeholder {
+      color:#fff;
+    }
+
+    &:-ms-input-placeholder {
+      color:#fff;
+    }
+
+    &:focus {
+      outline: 0;
+      box-shadow: none;
+      color: #fff;
+    }
+  }
+
+  button{
+    background: none;
+    border: 2px solid #fff;
+    color: #FFF;
+    cursor:pointer;
+    transition: background 0.5s ease;
+    &:hover{
+      background:#fff;
+      color:#2c3e50;
+    }
+  }
+
+  input[type=file]{
+    border-bottom: 1px solid #fff;
+    padding: 4px;
+  }
 }
