--- a/app_creditcard/templates/index.html
+++ b/app_creditcard/templates/index.html
@@ -3,18 +3,26 @@
 <head>
   <title>Credit Card Analysis</title>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
+  <link href="https://fonts.googleapis.com/css?family=Bevan|Open+Sans|Roboto" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="content">
-  <h1>Welcome to ABCD Bank!</h1>
-  <h2>Validate now your credit card!</h2>
-  Quantity credit cards (between 0 and 100): <input type="text" id="quantity" name="quantity" placeholder="Quantity credit cards (between 0 and 100)"> <button id="go">Go</button><br>
-  <div id="form"></div>
+  <div class="wrap-content">
+    <h1>ABCD Bank</h1>
 
-  <h2>Validate by file (.txt)</h2>
-  Upload file: <form id="uploadForm" method="post" enctype="multipart/form-data"><input type="file" name="file" /><button id="go-file">Go</button></form>
-  <div class="result-file"></div>
+    <div class="validate-creditcard">
+      <h3>Validate now your credit card!</h3>
+      <input type="text" id="quantity" name="quantity" placeholder="Quantity credit cards (between 0 and 100)" class="form-control form-quantity"> <button id="go">Go</button><br>
+      <div id="form" class="credit-cards"></div>
+    </div>
+
+    <div class="validate-file">
+      <h3>Validate by file (.txt)</h3>
+      <form id="uploadForm" method="post" enctype="multipart/form-data"><input type="file" name="file" /><button id="go-file">Go</button></form>
+      <div class="result-file"></div>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
